--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: 'Vazir';
-    src: url('/fonts/Vazir.woff2') format('woff2');
+    src: url('./assets/fonts/Vazir.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
