--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
 @import "tailwindcss";
 :root {
-    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -14,11 +10,26 @@
 
 @font-face {
     font-family: 'Vazir';
+    src: url('./assets/fonts/Vazir.ttf') format('truetype');
+    src: url('./assets/fonts/Vazir.eot');
     src: url('./assets/fonts/Vazir.woff2') format('woff2');
+    src: url('./assets/fonts/Vazir.woff') format('woff');
+    src: url('./assets/fonts/Vazir.eot?#iefix') format('embeded-opentype');
     font-weight: normal;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Vazir-bold';
+    src: url('./assets/fonts/Vazir-bold.ttf') format('truetype');
+    src: url('./assets/fonts/Vazir-bold.eot');
+    src: url('./assets/fonts/Vazir-bold.woff2') format('woff2');
+    src: url('./assets/fonts/Vazir-bold.woff') format('woff');
+    src: url('./assets/fonts/Vazir-bold.eot?#iefix') format('embeded-opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
 body {
-    font-family: 'Vazir', sans-serif;
+    font-family: 'Vazir', 'Vazir-bold', sans-serif;
 }
